feat(android): implement logout

--- a/androidApp/src/main/res/layout/loading_view.xml
+++ b/androidApp/src/main/res/layout/loading_view.xml
@@ -10,8 +10,13 @@
         android:id="@+id/progressBar"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
+        android:visibility="visible"
+        android:indeterminate="true"
+        android:indeterminateTintMode="src_atop"
+        android:indeterminateTint="@color/contrast"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:layout_centerInParent="true"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
