--- a/androidApp/src/main/res/navigation/app_graph.xml
+++ b/androidApp/src/main/res/navigation/app_graph.xml
@@ -7,22 +7,36 @@
     <fragment
         android:id="@+id/mainFragment"
         android:name="epos_next.app.android.MainFragment"
-        android:label="MainFragment" />
+        android:label="MainFragment" >
+        <action
+            android:id="@+id/action_mainFragment_to_loginFragment"
+            app:destination="@id/loginFragment"
+            app:popUpTo="@id/app_graph"
+            app:popUpToInclusive="true" />
+    </fragment>
     <fragment
         android:id="@+id/loadingFragment"
         android:name="epos_next.app.android.LoadingFragment"
         android:label="LoadingFragment" >
         <action
-            android:id="@+id/action_loadingFragment_to_mainFragment2"
+            android:id="@+id/action_loadingFragment_to_mainFragment"
             app:destination="@id/mainFragment"
-            app:popUpTo="@id/loadingFragment"
+            app:popUpTo="@id/app_graph"
             app:popUpToInclusive="true" />
         <action
             android:id="@+id/action_loadingFragment_to_loginFragment"
-            app:destination="@id/loginFragment" />
+            app:destination="@id/loginFragment"
+            app:popUpTo="@id/app_graph"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/loginFragment"
         android:name="epos_next.app.android.feats.login.LoginFragment"
-        android:label="LoginFragment" />
+        android:label="LoginFragment" >
+        <action
+            android:id="@+id/action_loginFragment_to_mainFragment"
+            app:destination="@id/mainFragment"
+            app:popUpTo="@id/app_graph"
+            app:popUpToInclusive="true" />
+    </fragment>
 </navigation>
