--- a/androidApp/src/main/res/xml/network_security_config.xml
+++ b/androidApp/src/main/res/xml/network_security_config.xml
@@ -14,7 +14,7 @@
     </base-config>
 
     <domain-config>
-        <domain includeSubdomains="true">https://epos-api.zotov.dev</domain>
+        <domain includeSubdomains="true">epos-api.zotov.dev</domain>
         <trust-anchors>
             <certificates src="user"/>
             <certificates src="system"/>
